--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.4",
         "mcamara/laravel-localization": "^1.5",
         "spatie/laravel-missing-page-redirector": "^2.6",
         "spatie/laravel-sitemap": "^5.7",
