--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,19 +7,19 @@ on:
     branches: [ master ]
 
 jobs:
- deploy:
-    runs-on: ubuntu-latest
-  
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Deployment
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          username: ${{ secrets.SSH_USERNAME }}
-          script: |
-            cd /home/zhevak/
-            mkdir test
+deploy:
+  runs-on: ubuntu-latest
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Deployment
+      uses: appleboy/ssh-action@main
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        username: ${{ secrets.SSH_USERNAME }}
+        script: |
+          cd /home/zhevak/divuar.com.ua/www
+          git checkout -f 
+          git pull
             
