--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,27 +1,16 @@
-name: Laravel
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+name: remote ssh command
+on: [push]
 jobs:
 
-  deploy:
+  build:
+    name: Build
     runs-on: ubuntu-latest
-  
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Deployment
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          username: ${{ secrets.SSH_USERNAME }}
-            
-          script: | 
-            whoami
-            echo "$HOST"
-            ls -a
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        username: ${{ secrets.SSH_USERNAME }}
+        port: 22
+        script: whoami
