--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,4 +12,5 @@ jobs:
         host: ${{ secrets.HOST }}
         key: ${{ secrets.KEY }}
         username: ${{ secrets.USERNAME }}
+        debug: true
         script: whoami
