--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -6,10 +6,9 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: executing remote ssh
-      uses: appleboy/ssh-action@master
+    - uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
-        key: ${{ secrets.KEY }}
         username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.KEY }}
         script: whoami
