--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -10,5 +10,5 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
+        port: 33622
         script: whoami
-        
